syntax = "proto3";
package hyperlane.igp.v1;

option go_package = "github.com/bcp-innovations/hyperlane-cosmos/x/igp/types";

import "gogoproto/gogo.proto";
import "hyperlane/igp/v1/types.proto";
import "google/api/annotations.proto";
import "cosmos/query/v1/query.proto";
import "amino/amino.proto";

// Msg defines the module Msg service.
service Query {
// Params returns the module parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/hyperlane/igp/v1/params";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}
